# games101course

./: .gitignore
testCode/Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp
testCode/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
testCode/Assignment2/作业2/: main.cpp  rasterizer.cpp  rasterizer.hpp
testCode/Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
testCode/Assignment4/: CMakeLists.txt  main.cpp
testCode/Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
testCode/Assignment6/: BVH.cpp  Bounds3.hpp  Ray.hpp  Renderer.cpp  Triangle.hpp
testCode/Assignment7/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp
testCode/Eigen3/doc/: TutorialMatrixArithmetic.dox
testCode/Eigen3/unsupported/Eigen/CXX11/src/Tensor/: TensorPatch.h
testCode/pa0/: CMakeLists.txt  main.cpp
